--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: 徐天阳 Charles Xu 
-description: f: Beijinger -> [Californian, Pennsylvanian], defined by f(x)= x
+description: f: Beijinger -> [Pennsylvanian, Californian], defined by f(x)= x
